--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   go_router: ^4.2.7
   dio: ^4.0.6
   shared_preferences: ^2.0.15
+  card_swiper: ^2.0.4
 dev_dependencies:
   flutter_test:
     sdk: flutter
